# goose

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.duckdb  README.md  README1.md  README_CN.md  gooseConfig.cmake.in  gooseConfigVersion.cmake.in  install_extension.test  kmpkg-configuration.json  kmpkg.json  setup.py
benchmark/: CMakeLists.txt  README.md  benchmark_runner.cc  config.h.in  goose_benchmark_main.cc  interpreted_benchmark.cc
benchmark/appian_benchmarks/: appian.benchmark.in
benchmark/csv/: sniffer_quotes.benchmark
benchmark/imdb/: CMakeLists.txt  imdb.benchmark.in
benchmark/include/: benchmark.h  benchmark_configuration.h  benchmark_runner.h  duckdb_benchmark.h  duckdb_benchmark_macro.h  interpreted_benchmark.h
benchmark/ingestion/: load_tpcds.sql  load_tpch.sql
benchmark/ldbc/: README.md  download-benchmark-data.py
benchmark/micro/: CMakeLists.txt  append.cc  append_mix.cc  bulkupdate.cc  cast.cc  in.cc  storage.cc
benchmark/parquet/: clickbench_write.benchmark
benchmark/taxi/: files.txt  taxi.benchmark.in
benchmark/tpcds/: tpcds_load.benchmark.in
benchmark/tpch/: CMakeLists.txt  startup.cc  tpch_load.benchmark.in  tpch_load_parquet.benchmark.in
benchmark/trainbenchmark/: .gitignore  README.md
examples/standalone-window/: CMakeLists.txt  Makefile
extension/: CMakeLists.txt  ExtensionDistribution.md  README.md  extension_config.cmake  generated_extension_headers.h.in  generated_extension_loader.cc.in
extension/autocomplete/: CMakeLists.txt  autocomplete_extension.cc  keyword_helper.cc  keyword_map.cc  matcher.cc  tokenizer.cc
extension/core_functions/: CMakeLists.txt  core_functions_config.py  core_functions_extension.cc  function_list.cc
extension/delta/: CMakeLists.txt  Makefile  README.md  extension_config.cmake
extension/demo_capi/: CMakeLists.txt  add_numbers.cc  capi_demo.cc
extension/icu/: CMakeLists.txt  README.md  icu-current.cc  icu-dateadd.cc  icu-datefunc.cc  icu-datepart.cc  icu-datesub.cc  icu-datetrunc.cc  icu-list-range.cc  icu-makedate.cc  icu-strptime.cc  icu-table-range.cc  icu-timebucket.cc  icu-timezone.cc  icu_extension.cc
extension/json/: CMakeLists.txt  json_common.cc  json_deserializer.cc  json_enums.cc  json_extension.cc  json_functions.cc  json_multi_file_info.cc  json_reader.cc  json_scan.cc  json_serializer.cc  serialize_json.cc
extension/loader/: dummy_static_extension_loader.cc  static_extension_loader.cc
extension/parquet/: CMakeLists.txt  column_reader.cc  column_writer.cc  old.txt  parquet_column_schema.cc  parquet_config.py  parquet_crypto.cc  parquet_extension.cc  parquet_field_id.cc  parquet_file_metadata_cache.cc  parquet_float16.cc  parquet_geometry.cc  parquet_metadata.cc  parquet_multi_file_info.cc  parquet_reader.cc  parquet_shredding.cc  parquet_statistics.cc  parquet_timestamp.cc  parquet_writer.cc  serialize_parquet.cc  zstd_file_system.cc
extension/tpcds/: CMakeLists.txt
extension/tpch/: CMakeLists.txt  tpch_extension.cc
goose/: CMakeLists.txt  README.md  goose-c.h  goose.h  version.h  version.h.in  version.rc
goose/benchmark/: benchmark_configuration.h  benchmark_runner.cc  goose_benchmark_macro.h  interpreted_benchmark.cc  interpreted_benchmark.h
goose/catalog/: CMakeLists.txt  catalog.cc  catalog_entry.cc  catalog_entry_retriever.cc  catalog_search_path.cc  catalog_set.cc  catalog_transaction.cc  dependency_catalog_set.cc  dependency_catalog_set.h  dependency_list.cc  dependency_manager.cc  entry_lookup_info.cc  entry_lookup_info.h  goose_catalog.cc  similar_catalog_entry.cc
goose/common/: CMakeLists.txt  allocator.cc  arena_stl_allocator.h  assert.cc  assert.h  bignum.cc  bignum.h  bind_helpers.cc  box_renderer.cc  case_insensitive_map.h  checksum.cc  column_index.h  common.h  constants.cc  csv_writer.cc  csv_writer.h  encryption_functions.cc  encryption_key_manager.cc  encryption_state.cc  enum_util.h  error_data.cc  exception.cc  exception_format_value.cc  extra_type_info.cc  fast_mem.h  file_buffer.cc  file_system.cc  file_system.h  filename_pattern.cc  filename_pattern.h  fsst.cc  gzip_file_system.cc  helper.h  hive_partitioning.cc  hugeint.h  insertion_order_preserving_map.h  limits.h  local_file_system.cc  local_file_system.h  memory_safety.h  (+28 more)
goose/execution/: adaptive_filter.cc  base_aggregate_hashtable.cc  column_binding_resolver.cc  execution_context.h  expression_executor.cc  join_hashtable.cc  join_hashtable.h  physical_operator.cc  physical_operator.h  radix_partitioned_hashtable.cc  radix_partitioned_hashtable.h
goose/fmt/: core.h  format-inl.h  format.cc  format.h  printf.h
goose/function/: aggregate_function.h  built_in_functions.cc  cast_rules.cc  copy_blob.cc  copy_function.cc  encoding_function.cc  function.cc  function_binder.cc  function_set.cc  macro_function.cc  pragma_function.cc  register_function_list.cc  scalar_function.cc  scalar_macro_function.cc  scalar_macro_function.h  table_function.cc  table_macro_function.cc  udf_function.cc
goose/imdb/: imdb.cc
goose/logging/: log_manager.cc  log_storage.cc  log_types.cc  logger.cc  logger.h  logging.cc  logging.h
goose/main/: CMakeLists.txt  chunk_scan_state.cc  client_config.cc  client_config.h  client_context.cc  client_context_file_opener.cc  client_context_wrapper.cc  client_verify.cc  config.cc  config.h  connection.h  database.cc  database_manager.cc  database_manager.h  db_instance_cache.cc  db_instance_cache.h  error_manager.cc  error_manager.h  extension.h  extension_helper.h  extension_install_info.cc  extension_install_info.h  extension_loader.cc  external_dependencies.h  pending_query_result.cc  profiling_info.cc  profiling_utils.cc  profiling_utils.hpp.template  query_result.cc  relation.cc  result_set_manager.h  stream_query_result.cc
goose/optimizer/: CMakeLists.txt  build_probe_side_optimizer.cc  common_subplan_optimizer.cc  compressed_materialization.cc  cse_optimizer.cc  empty_result_pullup.cc  expression_rewriter.h  filter_pullup.cc  filter_pushdown.cc  in_clause_rewriter.cc  join_elimination.cc  optimizer.cc  (+14 more)
test/: CMakeLists.txt  README.md  unittest.cc
(+9757 files in other folders)
