add_subdirectory(compressed_materialization)
add_subdirectory(join_order)
add_subdirectory(matcher)
add_subdirectory(pullup)
add_subdirectory(pushdown)
add_subdirectory(rule)
add_subdirectory(statistics)

add_library_unity(
  goose_optimizer
  OBJECT
  build_probe_side_optimizer.cc
  column_binding_replacer.cc
  column_lifetime_analyzer.cc
  empty_result_pullup.cc
  common_aggregate_optimizer.cc
  common_subplan_optimizer.cc
  compressed_materialization.cc
  cse_optimizer.cc
  cte_filter_pusher.cc
  cte_inlining.cc
  deliminator.cc
  expression_heuristics.cc
  expression_rewriter.cc
  filter_combiner.cc
  filter_pullup.cc
  filter_pushdown.cc
  in_clause_rewriter.cc
  join_filter_pushdown_optimizer.cc
  late_materialization.cc
  late_materialization_helper.cc
  optimizer.cc
  join_elimination.cc
  regex_range_filter.cc
  remove_duplicate_groups.cc
  remove_unused_columns.cc
  row_group_pruner.cc
  statistics_propagator.cc
  limit_pushdown.cc
  topn_optimizer.cc
  topn_window_elimination.cc
  unnest_rewriter.cc
  window_self_join.cc
  sampling_pushdown.cc
  sum_rewriter.cc)
set(ALL_OBJECT_FILES
    ${ALL_OBJECT_FILES} $<TARGET_OBJECTS:goose_optimizer>
    PARENT_SCOPE)
