add_subdirectory(compressed_materialization)
add_subdirectory(date)
add_subdirectory(generic)
add_subdirectory(list)
add_subdirectory(map)
add_subdirectory(operator)
add_subdirectory(sequence)
add_subdirectory(string)
add_subdirectory(struct)
add_subdirectory(variant)
add_subdirectory(system)
add_subdirectory(geometry)
add_library_unity(
  goose_func_scalar
  OBJECT
  compressed_materialization_utils.cc
  create_sort_key.cc
  strftime_format.cc
  nested_functions.cc
  pragma_functions.cc)
set(ALL_OBJECT_FILES
    ${ALL_OBJECT_FILES} $<TARGET_OBJECTS:goose_func_scalar>
    PARENT_SCOPE)
